WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287423
Adding `text-autospace: normal` causes some pages to crash
https://bugs.webkit.org/show_bug.cgi?id=287423
Summary
Adding `text-autospace: normal` causes some pages to crash
Tim Nguyen (:ntim)
Reported
2025-02-10 12:14:58 PST
rdar://144554727
Attachments
Testcase
(884 bytes, text/html)
2025-02-10 12:15 PST
,
Tim Nguyen (:ntim)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2025-02-10 12:15:19 PST
Created
attachment 474181
[details]
Testcase
Tim Nguyen (:ntim)
Comment 2
2025-02-10 12:16:59 PST
See more crashing tests here:
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Ventura-Release-WK2-Tests-EWS/93b5fdd3-36232/results.html
0 com.apple.WebCore 0x1218aaeac WTF::HashTableConstIterator<WTF::HashTable<unsigned long, WTF::KeyValuePair<unsigned long, float>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long, float>>, WTF::DefaultHash<unsigned long>, WTF::HashMap<unsigned long, float, WTF::DefaultHash<unsigned long>, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, WTF::HashTraits<float>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::KeyValuePairTraits, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, (WTF::ShouldValidateKey)1>, unsigned long, WTF::KeyValuePair<unsigned long, float>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long, float>>, WTF::DefaultHash<unsigned long>, WTF::HashMap<unsigned long, float, WTF::DefaultHash<unsigned long>, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, WTF::HashTraits<float>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::KeyValuePairTraits, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>> WTF::HashTable<unsigned long, WTF::KeyValuePair<unsigned long, float>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long, float>>, WTF::DefaultHash<unsigned long>, WTF::HashMap<unsigned long, float, WTF::DefaultHash<unsigned long>, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, WTF::HashTraits<float>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::KeyValuePairTraits, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, (WTF::ShouldValidateKey)1>::find<WTF::IdentityHashTranslator<WTF::HashMap<unsigned long, float, WTF::DefaultHash<unsigned long>, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, WTF::HashTraits<float>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::KeyValuePairTraits, WTF::DefaultHash<unsigned long>>, unsigned long>(unsigned long const&) const (.cold.1) 1 com.apple.WebCore 0x120be6ca8 WTF::HashTableConstIterator<WTF::HashTable<unsigned long, WTF::KeyValuePair<unsigned long, float>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long, float>>, WTF::DefaultHash<unsigned long>, WTF::HashMap<unsigned long, float, WTF::DefaultHash<unsigned long>, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, WTF::HashTraits<float>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::KeyValuePairTraits, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, (WTF::ShouldValidateKey)1>, unsigned long, WTF::KeyValuePair<unsigned long, float>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long, float>>, WTF::DefaultHash<unsigned long>, WTF::HashMap<unsigned long, float, WTF::DefaultHash<unsigned long>, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, WTF::HashTraits<float>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::KeyValuePairTraits, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>> WTF::HashTable<unsigned long, WTF::KeyValuePair<unsigned long, float>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long, float>>, WTF::DefaultHash<unsigned long>, WTF::HashMap<unsigned long, float, WTF::DefaultHash<unsigned long>, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, WTF::HashTraits<float>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::KeyValuePairTraits, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, (WTF::ShouldValidateKey)1>::find<WTF::IdentityHashTranslator<WTF::HashMap<unsigned long, float, WTF::DefaultHash<unsigned long>, WTF::UnsignedWithZeroKeyHashTraits<unsigned long>, WTF::HashTraits<float>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::KeyValuePairTraits, WTF::DefaultHash<unsigned long>>, unsigned long>(unsigned long const&) const 2 com.apple.WebCore 0x120bdcfd8 WebCore::Layout::InlineItemsBuilder::computeContentAttributesAndInlineTextItemWidths(WTF::Vector<WebCore::Layout::InlineItem, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WebCore::Layout::InlineItemPosition, WTF::Vector<WebCore::Layout::InlineItem, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&) 3 com.apple.WebCore 0x120bda718 WebCore::Layout::InlineItemsBuilder::build(WebCore::Layout::InlineItemPosition) 4 com.apple.WebCore 0x120bd8b54 WebCore::Layout::InlineFormattingContext::rebuildInlineItemListIfNeeded(WebCore::Layout::InlineDamage*) 5 com.apple.WebCore 0x120bd8294 WebCore::Layout::InlineFormattingContext::layout(WebCore::Layout::ConstraintsForInlineContent const&, WebCore::Layout::InlineDamage*) 6 com.apple.WebCore 0x120c1f57c WebCore::LayoutIntegration::LineLayout::layout() 7 com.apple.WebCore 0x12128b418 WebCore::RenderBlockFlow::layoutInlineContent(WebCore::RelayoutChildren, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 8 com.apple.WebCore 0x1212882b0 WebCore::RenderBlockFlow::layoutInFlowChildren(WebCore::RelayoutChildren, WebCore::LayoutUnit&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 9 com.apple.WebCore 0x121286dbc WebCore::RenderBlockFlow::layoutBlock(WebCore::RelayoutChildren, WebCore::LayoutUnit) 10 com.apple.WebCore 0x12126d018 WebCore::RenderBlock::layout() 11 com.apple.WebCore 0x121289f48 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 12 com.apple.WebCore 0x121289488 WebCore::RenderBlockFlow::layoutBlockChildren(WebCore::RelayoutChildren, WebCore::LayoutUnit&) 13 com.apple.WebCore 0x121288058 WebCore::RenderBlockFlow::layoutInFlowChildren(WebCore::RelayoutChildren, WebCore::LayoutUnit&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 14 com.apple.WebCore 0x121286dbc WebCore::RenderBlockFlow::layoutBlock(WebCore::RelayoutChildren, WebCore::LayoutUnit) 15 com.apple.WebCore 0x12126d018 WebCore::RenderBlock::layout() 16 com.apple.WebCore 0x121289f48 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 17 com.apple.WebCore 0x121289488 WebCore::RenderBlockFlow::layoutBlockChildren(WebCore::RelayoutChildren, WebCore::LayoutUnit&) 18 com.apple.WebCore 0x121288058 WebCore::RenderBlockFlow::layoutInFlowChildren(WebCore::RelayoutChildren, WebCore::LayoutUnit&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 19 com.apple.WebCore 0x121286dbc WebCore::RenderBlockFlow::layoutBlock(WebCore::RelayoutChildren, WebCore::LayoutUnit) 20 com.apple.WebCore 0x12126d018 WebCore::RenderBlock::layout() 21 com.apple.WebCore 0x121289f48 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 22 com.apple.WebCore 0x121289488 WebCore::RenderBlockFlow::layoutBlockChildren(WebCore::RelayoutChildren, WebCore::LayoutUnit&) 23 com.apple.WebCore 0x121288058 WebCore::RenderBlockFlow::layoutInFlowChildren(WebCore::RelayoutChildren, WebCore::LayoutUnit&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 24 com.apple.WebCore 0x121286dbc WebCore::RenderBlockFlow::layoutBlock(WebCore::RelayoutChildren, WebCore::LayoutUnit) 25 com.apple.WebCore 0x12126d018 WebCore::RenderBlock::layout() 26 com.apple.WebCore 0x1213d93cc WebCore::RenderView::layout() 27 com.apple.WebCore 0x120dd093c WebCore::LocalFrameViewLayoutContext::performLayout(bool) 28 com.apple.WebCore 0x120dbccec WebCore::LocalFrameViewLayoutContext::layout(bool) 29 com.apple.WebCore 0x120ddebf8 WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebCore::LocalFrameViewLayoutContext, WebCore::LocalFrameViewLayoutContext>(WebCore::LocalFrameViewLayoutContext&, void (WebCore::LocalFrameViewLayoutContext::*)())::'lambda'(), void>::call() 30 com.apple.WebCore 0x120f04480 WebCore::ThreadTimers::sharedTimerFiredInternal()
Vitor Roriz
Comment 3
2025-02-10 18:28:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40385
EWS
Comment 4
2025-02-11 07:46:25 PST
Committed
290211@main
(5e33b7064980): <
https://commits.webkit.org/290211@main
> Reviewed commits have been landed. Closing PR #40385 and removing active labels.
EWS
Comment 5
2025-02-18 11:29:48 PST
Committed
289651.133@safari-7621-branch
(031f7ac41f06): <
https://commits.webkit.org/289651.133@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2620 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug